Nicer handling of broken XKB configuration in gconf.

If XKB configuration fails, g-s-d tries to filter out layouts/variants
not registered in base.xml - then configure XKB again.
http://bugzilla.gnome.org/show_bug.cgi?id=585259